construction index ok

--- a/index.html
+++ b/index.html
@@ -2,30 +2,43 @@
 <html>
 	<head>
         <link rel="stylesheet" type="text/css" href="css/style.css"/>
+		<script src="https://kit.fontawesome.com/cd296f9de7.js" crossorigin="anonymous"></script>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+
 		<title>test FETCH JSON</title>
 	</head>
 
 		
 	</body>
+	<main class="index">
 		<section class="navigation">
-			<div>
-				<img>
+			<div class="logo">
+				<div id="fish">Fish</div>			
+				<div id="icone"><i class="fas fa-camera"></i></div>
+				<div id="eye">ye</div>	
+
 			</div>
-			<nav class="tags">
+			<nav class="nav">
 				<ul>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>		
+					<li class="tags">#Portrait</li>
+					<li class="tags">#Art</li>
+					<li class="tags">#Fashion</li>
+					<li class="tags">Architecture</li>
+					<li class="tags">#Travel</li>
+					<li class="tags">#Sport</li>
+					<li class="tags">#Animals</li>	
+					<li class="tags">#Events</li>			
 				</ul>
 			</nav>
-		</section>
-		<main>
+			<div class="accueil">NOS PHOTOGRAPHES</div>
 
-		</main>
-		<img src="" id="img">
+		</section><!--fermeture navigation-->
+		
+
+		
+	</main>
 	
 	<script src="js/script.js"></script>
 </html>
