--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 
 		
-	</body>
+	<body>
 	<main class="index">
 		<section class="navigation">
 			<div class="logo">
@@ -22,23 +22,27 @@
 			</div>
 			<nav class="nav">
 				<ul>
-					<li class="tags">#Portrait</li>
-					<li class="tags">#Art</li>
-					<li class="tags">#Fashion</li>
-					<li class="tags">Architecture</li>
-					<li class="tags">#Travel</li>
-					<li class="tags">#Sport</li>
-					<li class="tags">#Animals</li>	
-					<li class="tags">#Events</li>			
+					<li class="tags" id="portrait">#portrait</li>
+					<li class="tags" id="art">#art</li>
+					<li class="tags" id="fashion">#fashion</li>
+					<li class="tags" id="architecture">#architecture</li>
+					<li class="tags" id="travel">#travel</li>
+					<li class="tags" id="sport">#sport</li>
+					<li class="tags" id="animals">#animals</li>	
+					<li class="tags" id="events">#events</li>			
 				</ul>
 			</nav>
 			<div class="accueil">NOS PHOTOGRAPHES</div>
 
 		</section><!--fermeture navigation-->
 		
-
-		
 	</main>
 	
+	</body>	
+	
+	<script
+	src="https://use.fontawesome.com/releases/v5.15.3/js/all.js"
+	data-auto-a11y="true"
+  ></script>
 	<script src="js/script.js"></script>
 </html>
