--- a/carousel.html
+++ b/carousel.html
@@ -7,7 +7,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">	<title>Photograph</title>
-<script type="module" src="js/scriptphotograph.js" async></script>
+<script  src="js/carousel.js" ></script>
 </head>
 <body>
 	<main id="index">
@@ -18,6 +18,20 @@
 				<div id="eye">ye</div>	
 			</div>
 		</section>
+
+        <div  id="container">
+            
+
+                <div class="item"> <img src="img/Animals_Majesty.jpg" alt=""></div>
+                <div class="item"><img src="img/Animals_Rainbow.jpg" alt=""></div>
+                <div class="item"><img src="img/Architecture_Connected_Curves.jpg" alt=""></div>
+                <div class="item"><img src="img/Architecture_On_a_hill.jpg" alt=""></div>
+                <div class="item"><img src="img/RhodeDubois.jpg" alt=""></div>
+
+                </div>
+            </div>
+
+        </div>
 
 
 	</main>
