--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 	<head>
         <link rel="stylesheet" type="text/css" href="css/style.css"/>
 		<script src="https://kit.fontawesome.com/cd296f9de7.js" crossorigin="anonymous"></script>
+		
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+<script src="js/script.js" async></script>
 
 		<title>test FETCH JSON</title>
 	</head>
@@ -44,5 +46,5 @@
 	src="https://use.fontawesome.com/releases/v5.15.3/js/all.js"
 	data-auto-a11y="true"
   ></script>
-	<script src="js/script.js"></script>
+	
 </html>
