--- a/modal.html
+++ b/modal.html
@@ -3,11 +3,9 @@
 	<head>
         <link rel="stylesheet" type="text/css" href="css/style.css"/>
 		<script src="https://kit.fontawesome.com/cd296f9de7.js" crossorigin="anonymous"></script>
-		
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">	<title>Photograph</title>
-<script type="module" src="js/scriptphotograph.js" async></script>
 </head>
 <body>
 	<main id="index">
@@ -24,5 +22,5 @@
 </body>	
 
 
-
+<script type="module" src="js/modal.js"></script>
 </html>
