carousel ok + responsive sur index et aria manquant sur foramulaire

--- a/photograph.html
+++ b/photograph.html
@@ -10,13 +10,15 @@
 <script type="module" src="js/scriptphotograph.js" async></script>
 </head>
 <body>
-	<main id="index">
+	<main class="index">
 		<section class="navigation_photograph">
-			<div class="logo">
-				<div id="fish">Fish</div>			
-				<div id="icone"><i class="fas fa-camera"></i></div>
-				<div id="eye">ye</div>	
-			</div>
+			<a href="index.html"alt="Fisheye page d'accueil" aria-label="fisheye page d'accueil"  tabindex="1">	
+				<div class="logo" >
+					<div id="fish">Fish</div>			
+					<div id="icone"><i class="fas fa-camera"></i></div>
+					<div id="eye">ye</div>	
+
+			</div></a>
 		</section>
 
 
