--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 	<head>
         <link rel="stylesheet" type="text/css" href="css/style.css"/>
 		<script src="https://kit.fontawesome.com/cd296f9de7.js" crossorigin="anonymous"></script>
@@ -9,32 +9,33 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 <script src="js/script.js" async></script>
 
-		<title>test FETCH JSON</title>
+		<title>Fisheye</title>
 	</head>
 
 		
 	<body>
 	<main class="index">
 		<section class="navigation">
-			<div class="logo">
-				<div id="fish">Fish</div>			
-				<div id="icone"><i class="fas fa-camera"></i></div>
-				<div id="eye">ye</div>	
+			<a href="index.html"alt="Fisheye page d'accueil" aria-label="fisheye page d'accueil"  tabindex="1">	
+				<div class="logo" >
+					<div id="fish">Fish</div>			
+					<div id="icone"><i class="fas fa-camera"></i></div>
+					<div id="eye">ye</div>	
 
-			</div>
-			<nav class="nav">
-				<ul>
-					<li class="tags" id="portrait">#portrait</li>
-					<li class="tags" id="art">#art</li>
-					<li class="tags" id="fashion">#fashion</li>
-					<li class="tags" id="architecture">#architecture</li>
-					<li class="tags" id="travel">#travel</li>
-					<li class="tags" id="sport">#sport</li>
-					<li class="tags" id="animals">#animals</li>	
-					<li class="tags" id="events">#events</li>			
+			</div></a>
+			<nav class="nav" tabindex="2" alt="tag photographe" >
+				<ul >
+					<li class="tags" id="portrait" tabindex="3">#portrait</li>
+					<li class="tags" id="art"  tabindex="4">#art</li>
+					<li class="tags" id="fashion"  tabindex="5">#fashion</li>
+					<li class="tags" id="architecture"  tabindex="6">#architecture</li>
+					<li class="tags" id="travel"  tabindex="7">#travel</li>
+					<li class="tags" id="sport"  tabindex="8">#sport</li>
+					<li class="tags" id="animals"  tabindex="9">#animals</li>	
+					<li class="tags" id="events"  tabindex="10">#events</li>			
 				</ul>
 			</nav>
-			<div class="accueil">NOS PHOTOGRAPHES</div>
+			<h1 class="accueil"  tabindex="11">NOS PHOTOGRAPHES</h1>
 
 		</section><!--fermeture navigation-->
 		
