--- a/photograph.html
+++ b/photograph.html
@@ -13,7 +13,7 @@
 	<main class="index">
 		<section class="navigation_photograph">
 			<a href="index.html"alt="Fisheye page d'accueil" aria-label="fisheye page d'accueil"  tabindex="1">	
-				<div class="logo" >
+				<div class="logo" id="logo_photograph" >
 					<div id="fish">Fish</div>			
 					<div id="icone"><i class="fas fa-camera"></i></div>
 					<div id="eye">ye</div>	
