--- a/photograph.html
+++ b/photograph.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 	<head>
         <link rel="stylesheet" type="text/css" href="css/style.css"/>
 		<script src="https://kit.fontawesome.com/cd296f9de7.js" crossorigin="anonymous"></script>
@@ -12,7 +12,7 @@
 <body>
 	<main class="index">
 		<section class="navigation_photograph">
-			<a href="index.html"alt="Fisheye page d'accueil" aria-label="fisheye page d'accueil"  tabindex="1">	
+			<a href="index.html"alt="Fisheye page d'accueil"  aria-label= "fisheye page d'accueil"  tabindex="1">	
 				<div class="logo" id="logo_photograph" >
 					<div id="fish">Fish</div>			
 					<div id="icone"><i class="fas fa-camera"></i></div>
