--- a/photograph.html
+++ b/photograph.html
@@ -7,7 +7,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">	<title>Photograph</title>
-<script type="module" src="js/scriptphotograph.js" async></script>
+
 </head>
 <body>
 	<main class="index">
@@ -26,5 +26,5 @@
 </body>	
 
 
-
+<script type="module" src="js/scriptphotograph.js" ></script>
 </html>
