site presque fini

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<div id="eye">ye</div>	
 
 			</div></a>
-			<nav class="nav" tabindex="2" alt="tag photographe" >
+			<nav class="nav" tabindex="2" alt="tag photographe" aria-label="main navigation" role="navigation">
 				<ul >
 					<li class="tags" id="portrait" tabindex="3">#portrait</li>
 					<li class="tags" id="art"  tabindex="4">#art</li>
@@ -35,7 +35,7 @@
 					<li class="tags" id="events"  tabindex="10">#events</li>			
 				</ul>
 			</nav>
-			<h1 class="accueil"  tabindex="11">NOS PHOTOGRAPHES</h1>
+			<a href="index.html" alt="afficher tous les photographes" aria-label="afficher tous les photographes" visible="hidden"><h1 class="accueil"  tabindex="11" href="index.html" alt="afficher tous les photographes">NOS PHOTOGRAPHES</h1></a>
 
 		</section><!--fermeture navigation-->
 		
@@ -43,9 +43,6 @@
 	
 	</body>	
 	
-	<script
-	src="https://use.fontawesome.com/releases/v5.15.3/js/all.js"
-	data-auto-a11y="true"
-  ></script>
+	
   <script src="js/script.js" async></script>
 </html>
