--- a/photograph.html
+++ b/photograph.html
@@ -12,8 +12,8 @@
 <body>
 	<main class="index">
 		<section class="navigation_photograph">
-			<a href="index.html"alt="Fisheye page d'accueil"  aria-label= "fisheye page d'accueil"  tabindex="1">	
-				<div class="logo" id="logo_photograph" >
+			<a href="index.html"  aria-label= "lien vers page d'accueil"  alt="lien vers page d'accueil" tabindex="1" >	
+				<div class="logo" id="logo_photograph"alt="Fisheye logo" >
 					<div id="fish">Fish</div>			
 					<div id="icone"><i class="fas fa-camera"></i></div>
 					<div id="eye">ye</div>	
