new button select tri

--- a/index.html
+++ b/index.html
@@ -19,23 +19,26 @@
 			<a href="index.html"alt="Fisheye page d'accueil" aria-label="fisheye page d'accueil"  tabindex="1">	
 				<div class="logo" id="logo_index" >
 					<div id="fish">Fish</div>			
-					<div id="icone"><i class="fas fa-camera"></i></div>
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+						<path fill="var(--ci-primary-color, currentColor)" d="M471.993,112h-89.2L366.551,65.25a32.023,32.023,0,0,0-30.229-21.5H175.241a31.991,31.991,0,0,0-30.294,21.691L129.1,112h-89.1a24.027,24.027,0,0,0-24,24V448a24.027,24.027,0,0,0,24,24H471.993a24.027,24.027,0,0,0,24-24V136A24.027,24.027,0,0,0,471.993,112Zm-8,328H48.007V144h104.01l23.224-68.25H336.322L360.032,144H463.993Z" class="ci-primary"/>
+						<path fill="var(--ci-primary-color, currentColor)" d="M256,168A114,114,0,1,0,370,282,114.13,114.13,0,0,0,256,168Zm0,196a82,82,0,1,1,82-82A82.093,82.093,0,0,1,256,364Z" class="ci-primary"/>
+					  </svg>
 					<div id="eye">ye</div>	
 
 			</div></a>
 			<nav class="nav" tabindex="2" alt="tag photographe" aria-label="main navigation" role="navigation">
 				<ul >
-					<li class="tags" id="portrait" tabindex="3">#portrait</li>
-					<li class="tags" id="art"  tabindex="4">#art</li>
-					<li class="tags" id="fashion"  tabindex="5">#fashion</li>
-					<li class="tags" id="architecture"  tabindex="6">#architecture</li>
-					<li class="tags" id="travel"  tabindex="7">#travel</li>
-					<li class="tags" id="sport"  tabindex="8">#sport</li>
-					<li class="tags" id="animals"  tabindex="9">#animals</li>	
-					<li class="tags" id="events"  tabindex="10">#events</li>			
+					<li class="tags" id="portrait" tabindex="3">#Portrait</li>
+					<li class="tags" id="art"  tabindex="4">#Art</li>
+					<li class="tags" id="fashion"  tabindex="5">#Fashion</li>
+					<li class="tags" id="architecture"  tabindex="6">#Architecture</li>
+					<li class="tags" id="travel"  tabindex="7">#Travel</li>
+					<li class="tags" id="sport"  tabindex="8">#Sport</li>
+					<li class="tags" id="animals"  tabindex="9">#Animals</li>	
+					<li class="tags" id="events"  tabindex="10">#Events</li>			
 				</ul>
 			</nav>
-			<a href="index.html" alt="afficher tous les photographes" aria-label="afficher tous les photographes" visible="hidden"><h1 class="accueil"  tabindex="11" href="index.html" alt="afficher tous les photographes">NOS PHOTOGRAPHES</h1></a>
+			<a href="index.html" alt="afficher tous les photographes" aria-label="afficher tous les photographes" visible="hidden"><h1 class="accueil"  tabindex="11" href="index.html" alt="afficher tous les photographes">Nos photographes</h1></a>
 
 		</section><!--fermeture navigation-->
 		
