--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
 
 			</div></a>
 			<nav class="nav" tabindex="2" alt="tag photographe" aria-label="main navigation" role="navigation">
-				<ul >
-					<li class="tags" id="portrait" tabindex="3">#Portrait</li>
-					<li class="tags" id="art"  tabindex="4">#Art</li>
-					<li class="tags" id="fashion"  tabindex="5">#Fashion</li>
-					<li class="tags" id="architecture"  tabindex="6">#Architecture</li>
-					<li class="tags" id="travel"  tabindex="7">#Travel</li>
-					<li class="tags" id="sport"  tabindex="8">#Sport</li>
-					<li class="tags" id="animals"  tabindex="9">#Animals</li>	
-					<li class="tags" id="events"  tabindex="10">#Events</li>			
+				<ul aria-label="liste des tags">
+					<li class="tags" id="portrait" tabindex="3" aria-label="portrait">#Portrait</li>
+					<li class="tags" id="art"  tabindex="4" aria-label="art">#Art</li>
+					<li class="tags" id="fashion"  tabindex="5" aria-label="fashion">#Fashion</li>
+					<li class="tags" id="architecture"  tabindex="6" aria-label="architecture">#Architecture</li>
+					<li class="tags" id="travel"  tabindex="7" aria-label="travel">#Travel</li>
+					<li class="tags" id="sport"  tabindex="8" aria-label="sport">#Sport</li>
+					<li class="tags" id="animals"  tabindex="9" aria-label="animaux">#Animals</li>	
+					<li class="tags" id="events"  tabindex="10" aria-label="events">#Events</li>			
 				</ul>
 			</nav>
 			<a href="index.html" alt="afficher tous les photographes" aria-label="afficher tous les photographes" visible="hidden"><h1 class="accueil"  tabindex="11" href="index.html" alt="afficher tous les photographes">Nos photographes</h1></a>
@@ -48,5 +48,5 @@
 	</body>	
 	
 	
-  <script src="js/script.js" async></script>
+  <script type="module" src="js/script.js"></script>
 </html>
